Fix T103066: Cycles missing full constant foler for mix float and mix vector