intern/cycles/scene/shader_nodes.cpp
@@ -5132,6 +5132,9 @@ void MixFloatNode::constant_fold(const ConstantFolder &folder)
     }
     folder.make_constant(a * (1 - fac) + b * fac);
   }
+  else {
+    folder.fold_mix_float(use_clamp, false);
+  }
 }
 
 /* Mix Vector */
@@ -5184,6 +5187,9 @@ void MixVectorNode::constant_fold(const ConstantFolder &folder)
       fac = clamp(fac, 0.0f, 1.0f);
     }
     folder.make_constant(a * (one_float3() - fac) + b * fac);
+  }
+  else {
+    folder.fold_mix_color(NODE_MIX_BLEND, use_clamp, false);
   }
 }
 
